[package]
name = "bits"
description = "Converts input into bits (with explanations, where applicable)"
authors = ["Markus Mayer <github@widemeadows.de>"]
categories = ["command-line-utilities", "development-tools"]
keywords = ["bits", "bit-interpretation"]
license = "EUPL-1.2"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[features]
default = ["half"]
half = ["dep:half"]

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
half = { version = "2.3.1", optional = true }
termcolor = "1.4.0"
